--- a/Client/flipkart/src/components/Header.css
+++ b/Client/flipkart/src/components/Header.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 nav{
@@ -10,7 +11,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     color: #ffffff;
-    
+   
 }
 
 #inp{
